# sd-team-tech-fun

./: README.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  store.ts  types.ts
frontend/src/components/: Chart.tsx  Map.tsx  PopulationChart.tsx  SatelliteMap.tsx  SatelliteMapCitizen.tsx
geminiApi/: .gitignore  cdk.json  event.json  package-lock.json  package.json
geminiApi/asset/: index.py  pyproject.toml  service.py  template.py
geminiApi/lib/: gemini_api-stack.ts
geminiApi/test/: gemini_api.test.ts
infra/: .env  package-lock.json  package.json
infra/lib/: infra-stack.ts
samples/: hello_genimi.py  json_to_dynamojson.py  pyproject.toml  random_geo_points_generator.py
samples/hello_gemini/: hello_genimi.py
samples/hello_rasterio/: hello_genimi.py  hello_rasterio.py  interpret_image_and_save.py
