[project]
name = "samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.63",
    "google-cloud-aiplatform>=1.71.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "rasterio>=1.4.2",
    "vertexai>=1.71.1",
]
