[project]
name = "asset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "google-cloud-aiplatform>=1.72.0",
]

[tool.setuptools]
py-modules = ["index", "service", "template"]

[dependency-groups]
dev = [
    "boto3>=1.35.65",
    "python-lambda-local>=0.1.13",
    "setuptools>=75.5.0",
]
